WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257754
Arrow key keyboard scrolling in Safari doesn't work
https://bugs.webkit.org/show_bug.cgi?id=257754
Summary
Arrow key keyboard scrolling in Safari doesn't work
Richard Robinson
Reported
2023-06-06 10:56:50 PDT
rdar://110333066
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2023-06-06 11:01:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14702
EWS
Comment 2
2023-06-06 16:08:11 PDT
Committed
264913@main
(2ef7008f5d54): <
https://commits.webkit.org/264913@main
> Reviewed commits have been landed. Closing PR #14702 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug