Arrow key keyboard scrolling in Safari doesn't work https://bugs.webkit.org/show_bug.cgi?id=257754 rdar://110333066

Reviewed by Aditya Keerthi.

264230@main added an early return in `RemoteScrollingTreeMac::didCommitTree` to ensure that
`RemoteScrollingTreeMac::startPendingScrollAnimations` wasn't called in the case that there
are zero pending scrolling animations. However, this only checked for non-keyboard scroll
animations. This resulted in the early return happening even when there are pending keyboard
scroll animations causing the keyboard scrolling animations to never start.

This PR fixes this by early returning only if there are zero non-keyboard scroll animations
and zero keyboard scroll animations.

Note that there are existing tests for this which did also catch this, but EWS doesn't run
with the necessary configuration.

* Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteScrollingTreeMac.mm:
(WebKit::RemoteScrollingTreeMac::didCommitTree):

Canonical link: https://commits.webkit.org/264913@main